--- a/UserRegister.html
+++ b/UserRegister.html
@@ -11,7 +11,7 @@
 	</script>
 	<body class="font">
 		<fieldset>
-			<legend class="font-legend">Registration</legend>
+			<legend class="font-legend">Registrati</legend>
 			<form action="action.java">
 				<div>
 					<label class="required">First Name</label>
